Added Performance service and controller